# __mdb_driver_wip

./: .gitignore  README.md  index.html  pyproject.toml  setup.cfg
.github/workflows/: sphinx.yml  sphynx.yml  wheel_builder_testpy.yml
docs/: catalog.rst  chunk_decoder.rst  conf.py  driver.rst  generate.py  graph_objects.rst  index.rst  iobuffer.rst  message_decoder.rst  message_receiver.rst  millenniumdb_error.rst  record.rst  request_builder.rst  response_handler.rst  result.rst  session.rst  socket_connection.rst
src/: catalog.py  chunk_decoder.py  driver.py  graph_objects.py  iobuffer.py  message-decoder.py  message_decoder.py  message_receiver.py  millenniumdb_error.py  protocol.py  record.py  request_builder.py  response_handler.py  result.py  session.py  socket_connection.py
src/millenniumdb_driver/: catalog.py  graph_objects.py  message_decoder.py  record.py  request_builder.py  socket_connection.py
src/millenniumdb_driver_python/: __init__.py  catalog.py  chunk_decoder.py  driver.py  graph_objects.py  iobuffer.py  message_decoder.py  message_receiver.py  millenniumdb_error.py  protocol.py  record.py  request_builder.py  response_handler.py  result.py  session.py  socket_connection.py
