[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "millenniumdb_driver_python"
authors = [{name = "Vicente Calisto", email = "vecalisto@uc.cl"},{name = "Matías Maldonado", email = "matiasmaldonado@uc.cl"}]
dynamic = ["version", "description"]